--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "fzaninotto/faker": "^1.8",
         "jenssegers/mongodb": "^3.4",
         "laravel/lumen-framework": "5.7.*",
-        "tymon/jwt-auth": "^0.5.12",
+        "tymon/jwt-auth": "dev-develop",
         "vlucas/phpdotenv": "~2.2"
     },
     "require-dev": {
